@@ -3,6 +3,7 @@ Changes for 3.4.14rc1
 New features:
 
 Bug fixes:
+.......PS. [DEV-904] fixed configuration of the maximum available count of aggregated metrics in a single request to vmware vCenter (MVekslers)
 ..F....... [ZBX-14676] fixed displaying links containing UTF-8 characters (Ivo)
 ...G...PS. [ZBX-14756] fixed zbxregexp library not compiling with old versions of pcre; thanks to Simon Matter for the patch (yurii)
 
@@ -1337,6 +1338,7 @@ Changes for 3.0.22rc1
 New features:
 
 Bug fixes:
+.......PS. [DEV-904] fixed configuration of the maximum available count of aggregated metrics in a single request to vmware vCenter (MVekslers)
 ..F....... [ZBX-14676] fixed displaying links containing UTF-8 characters (Ivo)
 
 --------------------------------------------------------------------------------
